--- a/project/IR/PBLS-IR-Physical-AI-01.html
+++ b/project/IR/PBLS-IR-Physical-AI-01.html
@@ -448,62 +448,92 @@
                 <section id="problems" class="mb-16 fade-in-card">
                     <h2 class="text-3xl font-bold themeable-heading mb-8">2. 핵심 문제: Physical AI 데이터 병목</h2>
 
-                    <div class="themeable-card rounded-xl p-8 interactive-card">
-                        <p class="themeable-text mb-6 leading-relaxed">
-                            'Non-IT' Physical AI 시장의 고객들은 공통적으로 <strong class="accent-text">3가지 핵심 데이터 문제</strong>에 직면해 있습니다.
-                        </p>
-
-                        <!-- Problems Table -->
-                        <div class="overflow-x-auto">
-                            <table class="w-full text-left">
-                                <thead>
-                                    <tr class="border-b-2 themeable-border">
-                                        <th class="py-3 px-4 font-bold themeable-heading">문제</th>
-                                        <th class="py-3 px-4 font-bold themeable-heading">설명</th>
-                                        <th class="py-3 px-4 font-bold themeable-heading">영향</th>
-                                    </tr>
-                                </thead>
-                                <tbody class="themeable-text">
-                                    <tr class="border-b themeable-border comparison-row">
-                                        <td class="py-4 px-4">
-                                            <strong class="accent-text">Problem 1<br>데이터 기근</strong>
-                                        </td>
-                                        <td class="py-4 px-4">
-                                            희귀 불량 사례, 로봇 예외 동작, 자율주행 위험 상황 등 Long-tail 데이터는 <strong>현실에서 획득 불가능</strong>
-                                        </td>
-                                        <td class="py-4 px-4">
-                                            AI 모델의 엣지 케이스 대응력 부족
-                                        </td>
-                                    </tr>
-                                    <tr class="border-b themeable-border comparison-row">
-                                        <td class="py-4 px-4">
-                                            <strong class="accent-text">Problem 2<br>보안 & On-Prem</strong>
-                                        </td>
-                                        <td class="py-4 px-4">
-                                            제조 데이터는 <strong>핵심 기술 자산</strong>이므로 클라우드 반출 불가, On-Premise 환경 필수
-                                        </td>
-                                        <td class="py-4 px-4">
-                                            클라우드 기반 AI 도구 사용 제한
-                                        </td>
-                                    </tr>
-                                    <tr class="comparison-row">
-                                        <td class="py-4 px-4">
-                                            <strong class="accent-text">Problem 3<br>멀티모달 복잡성</strong>
-                                        </td>
-                                        <td class="py-4 px-4">
-                                            센서, 비전, 로그 등 <strong>이질적 멀티모달 데이터</strong>의 실시간 수집/처리/통합 필요
-                                        </td>
-                                        <td class="py-4 px-4">
-                                            데이터 파이프라인 구축 어려움
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                    <div class="themeable-card rounded-xl p-8 mb-6 interactive-card">
+                        <div class="mb-6">
+                            <span class="text-sm font-semibold accent-text uppercase tracking-wider">Problem #1</span>
+                            <h3 class="text-2xl font-bold themeable-heading mt-2 mb-4">데이터 기근 (Data Scarcity)</h3>
                         </div>
+                        <div class="space-y-4 themeable-text leading-relaxed">
+                            <p>
+                                Physical AI가 실제 환경에서 작동하려면 <strong class="accent-text">Long-tail 데이터</strong>가 필수적입니다. 그러나 희귀 불량 사례, 로봇 예외 동작, 자율주행 위험 상황 등은 <strong>현실에서 거의 발생하지 않아 획득이 불가능</strong>합니다.
+                            </p>
 
-                        <div class="mt-6 p-4 rounded-lg" style="background-color: rgba(248, 104, 37, 0.1);">
-                            <p class="themeable-text text-sm">
-                                <strong>결론:</strong> Physical AI 시대의 진정한 해자(Moat)는 모델이 아닌, 고유한 데이터를 수집·정제·생성하는 <strong class="accent-text">'데이터 파이프라인'</strong> 그 자체입니다.
+                            <div class="bg-opacity-10 rounded-lg p-6 border-l-4 border-l-orange-500" style="background-color: rgba(248, 104, 37, 0.1);">
+                                <p class="font-semibold mb-3">현실의 데이터 기근 사례</p>
+                                <ul class="space-y-2 ml-4">
+                                    <li><strong class="accent-text">스마트팩토리:</strong> 연간 발생률 0.001% 미만의 희귀 불량 패턴</li>
+                                    <li><strong class="accent-text">자율주행:</strong> 실제 도로에서 위험 상황 재현 불가</li>
+                                    <li><strong class="accent-text">로보틱스:</strong> 예외 상황 발생 시 시스템 중단, 데이터 미수집</li>
+                                </ul>
+                            </div>
+
+                            <p>
+                                결과적으로 AI 모델은 <strong>엣지 케이스와 예외 상황에 대한 대응력이 부족</strong>하여 실전 배포가 어렵습니다.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="themeable-card rounded-xl p-8 mb-6 interactive-card">
+                        <div class="mb-6">
+                            <span class="text-sm font-semibold accent-text uppercase tracking-wider">Problem #2</span>
+                            <h3 class="text-2xl font-bold themeable-heading mt-2 mb-4">보안 & On-Premise 제약</h3>
+                        </div>
+                        <div class="space-y-4 themeable-text leading-relaxed">
+                            <p>
+                                제조, 조선, 국방 산업의 데이터는 <strong class="accent-text">핵심 기술 자산</strong>이자 국가 안보와 직결됩니다. 이러한 데이터는 <strong>클라우드 반출이 절대 불가능</strong>하며, 모든 처리가 On-Premise 환경에서 이루어져야 합니다.
+                            </p>
+
+                            <div class="bg-opacity-10 rounded-lg p-6 border-l-4 border-l-orange-500" style="background-color: rgba(248, 104, 37, 0.1);">
+                                <p class="font-semibold mb-3">On-Premise 필수 산업</p>
+                                <ul class="space-y-2 ml-4">
+                                    <li><strong class="accent-text">현대자동차:</strong> 차량 설계/제조 데이터 외부 반출 금지</li>
+                                    <li><strong class="accent-text">조선업:</strong> 선박 도면 및 건조 공정 기밀</li>
+                                    <li><strong class="accent-text">국방산업:</strong> 무기체계 및 군사 시설 데이터 보안등급 최상</li>
+                                </ul>
+                            </div>
+
+                            <p>
+                                클라우드 기반 AI 도구 사용이 제한되어 <strong>데이터 처리 및 AI 개발의 효율성이 크게 저하</strong>됩니다.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="themeable-card rounded-xl p-8 mb-6 interactive-card">
+                        <div class="mb-6">
+                            <span class="text-sm font-semibold accent-text uppercase tracking-wider">Problem #3</span>
+                            <h3 class="text-2xl font-bold themeable-heading mt-2 mb-4">멀티모달 데이터 복잡성</h3>
+                        </div>
+                        <div class="space-y-4 themeable-text leading-relaxed">
+                            <p>
+                                Physical AI는 물리적 세계를 이해하기 위해 <strong class="accent-text">이질적인 멀티모달 데이터</strong>를 실시간으로 통합해야 합니다. 센서, 비전 카메라, 시계열 로그, 3D 공간 데이터 등 서로 다른 형식과 주기를 가진 데이터의 동기화와 처리는 극도로 복잡합니다.
+                            </p>
+
+                            <div class="bg-opacity-10 rounded-lg p-6 border-l-4 border-l-orange-500" style="background-color: rgba(248, 104, 37, 0.1);">
+                                <p class="font-semibold mb-3">멀티모달 데이터 통합 과제</p>
+                                <ul class="space-y-2 ml-4">
+                                    <li><strong class="accent-text">센서 융합:</strong> LiDAR, 레이더, IMU, GPS 등 다양한 센서 데이터 동기화</li>
+                                    <li><strong class="accent-text">시계열 정렬:</strong> 서로 다른 샘플링 주기를 가진 데이터의 시간 정렬</li>
+                                    <li><strong class="accent-text">실시간 처리:</strong> 밀리초 단위 지연으로 대용량 데이터 스트림 처리</li>
+                                </ul>
+                            </div>
+
+                            <p>
+                                대부분의 기업은 <strong>데이터 파이프라인 구축에 실패</strong>하여 AI 프로젝트 자체가 좌초됩니다.
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- Conclusion Card -->
+                    <div class="themeable-card rounded-xl p-8 interactive-card border-2 border-orange-500 border-opacity-50">
+                        <div class="space-y-4 themeable-text leading-relaxed">
+                            <p class="text-lg font-bold themeable-heading mb-4">
+                                💡 핵심 인사이트
+                            </p>
+                            <p>
+                                Physical AI 시대의 진정한 해자(Moat)는 모델이 아닙니다. 희소하고, 보안이 필요하며, 복잡한 데이터를 <strong class="accent-text">수집·정제·생성</strong>하는 <strong class="accent-text">'데이터 파이프라인'</strong> 그 자체가 가장 큰 경쟁력입니다.
+                            </p>
+                            <p>
+                                이 파이프라인을 구축하고 운영할 수 있는 기업만이 Physical AI 시장에서 살아남을 수 있습니다.
                             </p>
                         </div>
                     </div>
@@ -690,10 +720,10 @@
                         </h2>
                         <div class="space-y-3 text-sm themeable-text leading-relaxed">
                             <p>[1] 과학기술정보통신부 (2025). "AI·디지털 혁신성장 전략: 로봇 및 자율시스템 분야 육성 방안." <a href="https://www.msit.go.kr" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://www.msit.go.kr</a></p>
-                            <p>[2] Andrew Ng (2021). "A Chat with Andrew on MLOps: From Model-centric to Data-centric AI." DeepLearning.AI. <a href="https://www.deeplearning.ai/the-batch/issue-80/" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://www.deeplearning.ai/the-batch/issue-80/</a></p>
+                            <p>[2] Andrew Ng (2022). "Andrew Ng: Unbiggen AI." IEEE Spectrum. <a href="https://spectrum.ieee.org/andrew-ng-data-centric-ai" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://spectrum.ieee.org/andrew-ng-data-centric-ai</a></p>
                             <p>[3] McKinsey & Company (2024). "The State of AI in 2024: Generative AI's Breakout Year." <a href="https://www.mckinsey.com/capabilities/quantumblack/our-insights/the-state-of-ai" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://www.mckinsey.com/capabilities/quantumblack/our-insights/the-state-of-ai</a></p>
                             <p>[4] ISO/IEC 42001:2023 (2023). "Information technology — Artificial intelligence — Management system." <a href="https://www.iso.org/standard/81230.html" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://www.iso.org/standard/81230.html</a></p>
-                            <p>[5] Stanford Institute for Human-Centered AI (2024). "Artificial Intelligence Index Report 2024." <a href="https://aiindex.stanford.edu/report/" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://aiindex.stanford.edu/report/</a></p>
+                            <p>[5] Stanford Institute for Human-Centered AI (2024). "Artificial Intelligence Index Report 2024." <a href="https://hai.stanford.edu/ai-index" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://hai.stanford.edu/ai-index</a></p>
                             <p>[6] NVIDIA (2025). "CES 2025: AI Advancing at 'Incredible Pace' — Jensen Huang on Physical AI and Robotics." NVIDIA Blog. <a href="https://blogs.nvidia.com/blog/ces-2025-jensen-huang/" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://blogs.nvidia.com/blog/ces-2025-jensen-huang/</a></p>
                             <p>[7] Pebblous Blog (2025). "데이터 스타트업이 Physical AI에 올라타는 법: AI 범용화 시대의 생존 전략." <a href="https://blog.pebblous.ai/project/PhysicalAI/data-startup-physical-ai-01.html" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://blog.pebblous.ai/project/PhysicalAI/data-startup-physical-ai-01.html</a></p>
                             <p>[8] Pebblous Blog (2025). "Physical AI를 위한 데이터 파이프라인: Edge-to-Core 아키텍처의 중요성." <a href="https://blog.pebblous.ai/project/PhysicalAI/data-pipeline-for-physical-ai-01.html" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://blog.pebblous.ai/project/PhysicalAI/data-pipeline-for-physical-ai-01.html</a></p>
