--- a/project/IR/PBLS-IR-Physical-AI-01.html
+++ b/project/IR/PBLS-IR-Physical-AI-01.html
@@ -476,7 +476,7 @@
                     <div class="themeable-card rounded-xl p-8 mb-6 interactive-card">
                         <div class="mb-6">
                             <span class="text-sm font-semibold accent-text uppercase tracking-wider">Problem #2</span>
-                            <h3 class="text-2xl font-bold themeable-heading mt-2 mb-4">보안 & On-Premise 제약</h3>
+                            <h3 class="text-2xl font-bold themeable-heading mt-2 mb-4">보안 & 거버넌스 제약</h3>
                         </div>
                         <div class="space-y-4 themeable-text leading-relaxed">
                             <p>
@@ -493,7 +493,11 @@
                             </div>
 
                             <p>
-                                클라우드 기반 AI 도구 사용이 제한되어 <strong>데이터 처리 및 AI 개발의 효율성이 크게 저하</strong>됩니다.
+                                더 나아가, <strong class="accent-text">데이터 품질 관리와 통제를 위한 내부 규정(Data Governance)</strong> 역시 보안이 필요합니다. 데이터 수집·가공·활용 정책, 품질 기준, 접근 권한 체계 등은 기업의 <strong>AI 경쟁력과 직결된 핵심 노하우</strong>이며, 외부 유출 시 경쟁 우위를 상실하게 됩니다.
+                            </p>
+
+                            <p>
+                                결과적으로 클라우드 기반 AI 도구 사용이 제한되고, <strong>데이터 처리 및 AI 개발의 효율성이 크게 저하</strong>되며, 거버넌스 구축 자체가 장벽이 됩니다.
                             </p>
                         </div>
                     </div>
