--- a/project/IR/PBLS-IR-Physical-AI-01.html
+++ b/project/IR/PBLS-IR-Physical-AI-01.html
@@ -351,7 +351,7 @@
 
                         <div class="space-y-6 themeable-text leading-relaxed">
                             <p>
-                                AI 기술이 범용화되며 시장은 명확히 양분되고 있습니다. IT 기업이 자체 개발하는 <strong>'범용 AI'</strong> 시장은 레드오션이 되었지만, AI를 자체 구축할 수 없으나 도입 수요가 폭발적인 <strong class="accent-text">'Non-IT 기간산업'</strong>이라는 거대한 블루오션이 열리고 있습니다.
+                                AI 기술이 범용화되며 시장은 명확히 양분되고 있습니다. IT 기업이 자체 개발하는 <strong>'범용 AI'</strong> 시장은 레드오션이 된 반면, AI 자체 구축 역량이 부족하지만 도입 수요는 폭발적인 <strong class="accent-text">'Non-IT 기간산업'</strong> 분야에서 거대한 블루오션이 열리고 있습니다.
                             </p>
 
                             <p>
