--- a/project/ISO5259/5259-2-cheetsheet-01.html
+++ b/project/ISO5259/5259-2-cheetsheet-01.html
@@ -378,7 +378,7 @@
 
                 <h3 class="themeable-heading text-2xl mt-8 mb-4">5.2. 진단 레벨별 QM 대응 관계 분석</h3>
 
-                <h4 class="themeable-heading text-xl mt-6 mb-3">1. Level I (기초 품질) 진단과 내재적 특성의 연관성</h4>
+                <h4 class="themeable-heading font-bold text-xl mt-6 mb-3">1. Level I (기초 품질) 진단과 내재적 특성의 연관성</h4>
                 <div class="themeable-card p-6 rounded-lg border mb-6">
                     <p class="text-base leading-relaxed mb-4">
                         페블러스의 Level I 진단은 데이터 정합성, 결측치, 클래스 균형 등 데이터셋의 기본적인 통계적, 물리적 특성을 평가하는 기초 분석 단계입니다. 이는 ISO 표준의 전통적인 <strong>내재적 데이터 품질 특성</strong> 그룹과 직접적으로 연결됩니다.
@@ -391,7 +391,7 @@
                     </ul>
                 </div>
 
-                <h4 class="themeable-heading text-xl mt-6 mb-3">2. Level II/III (고급 품질) 진단과 추가 특성의 연관성</h4>
+                <h4 class="themeable-heading font-bold text-xl mt-6 mb-3">2. Level II/III (고급 품질) 진단과 추가 특성의 연관성</h4>
                 <div class="themeable-card p-6 rounded-lg border mb-6">
                     <p class="text-base leading-relaxed mb-4">
                         Level II/III 진단은 페블러스의 핵심 기술인 <strong>데이터렌즈(DataLens)</strong>를 활용하여 AI 학습 데이터를 임베딩 공간의 특징 벡터로 변환하고, 이를 기반으로 데이터의 기하학적 및 분포적 속성을 분석하는 고급 단계입니다. 이 방법론은 ISO 표준이 AI/ML을 위해 특별히 정의한 <strong>'추가 데이터 품질 특성'</strong> 그룹, 특히 데이터셋의 <strong>충실도(Fidelity)</strong>를 평가하는 데 최적화되어 있습니다.
@@ -418,13 +418,13 @@
             <section id="references" class="mb-16">
                 <h2 class="themeable-heading">참고 문헌 (References)</h2>
                 <div class="themeable-card p-6 rounded-lg border">
-                    <ol class="list-decimal list-inside space-y-2 text-base">
-                        <li>ISO/IEC 5259-1:2024. 인공지능 — 분석 및 기계 학습(ML)을 위한 데이터 품질 - 제1부: 개요, 용어 및 예시</li>
-                        <li>ISO/IEC 5259-2:2024. Artificial intelligence — Data quality for analytics and machine learning (ML) — Part 2: Data quality measures</li>
-                        <li>ISO/IEC 25012:2008. 소프트웨어 공학 — 소프트웨어 제품 품질 요구사항 및 평가(SQuaRE) — 데이터 품질 모델</li>
-                        <li>ISO/IEC 25024:2015. 시스템 및 소프트웨어 엔지니어링 - 시스템 및 소프트웨어 품질 요구사항 및 평가(SQuaRE) - 데이터 품질 측정</li>
-                        <li>페블러스 (Pebblous) 공식 웹사이트. AI-Ready Data Solutions. URL: <a href="https://pebblous.ai" target="_blank" class="themeable-accent font-semibold hover:underline">pebblous.ai</a></li>
-                        <li>페블러스 데이터 클리닉 (Pebblous Data Clinic). AI 학습데이터의 품질 진단 및 개선 올인원 솔루션. URL: <a href="https://pebblous.ai" target="_blank" class="themeable-accent font-semibold hover:underline">pebblous.ai</a></li>
+                    <ol class="list-decimal list-inside space-y-3 text-base">
+                        <li>ISO/IEC 5259-1:2024. 인공지능 — 분석 및 기계 학습(ML)을 위한 데이터 품질 - 제1부: 개요, 용어 및 예시 <a href="https://www.iso.org/standard/81087.html" target="_blank" title="https://www.iso.org/standard/81087.html" class="inline-block ml-1 text-gray-400 hover:text-orange-500 transition-colors align-middle"><svg class="w-4 h-4 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg></a></li>
+                        <li>ISO/IEC 5259-2:2024. Artificial intelligence — Data quality for analytics and machine learning (ML) — Part 2: Data quality measures <a href="https://www.iso.org/standard/81088.html" target="_blank" title="https://www.iso.org/standard/81088.html" class="inline-block ml-1 text-gray-400 hover:text-orange-500 transition-colors align-middle"><svg class="w-4 h-4 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg></a></li>
+                        <li>ISO/IEC 25012:2008. 소프트웨어 공학 — 소프트웨어 제품 품질 요구사항 및 평가(SQuaRE) — 데이터 품질 모델 <a href="https://www.iso.org/standard/35736.html" target="_blank" title="https://www.iso.org/standard/35736.html" class="inline-block ml-1 text-gray-400 hover:text-orange-500 transition-colors align-middle"><svg class="w-4 h-4 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg></a></li>
+                        <li>ISO/IEC 25024:2015. 시스템 및 소프트웨어 엔지니어링 - 시스템 및 소프트웨어 품질 요구사항 및 평가(SQuaRE) - 데이터 품질 측정 <a href="https://www.iso.org/standard/35749.html" target="_blank" title="https://www.iso.org/standard/35749.html" class="inline-block ml-1 text-gray-400 hover:text-orange-500 transition-colors align-middle"><svg class="w-4 h-4 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg></a></li>
+                        <li>페블러스 (Pebblous) 공식 웹사이트. AI-Ready Data Solutions <a href="https://pebblous.ai" target="_blank" title="https://pebblous.ai" class="inline-block ml-1 text-gray-400 hover:text-orange-500 transition-colors align-middle"><svg class="w-4 h-4 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg></a></li>
+                        <li>페블러스 데이터 클리닉 (Pebblous Data Clinic). AI 학습데이터의 품질 진단 및 개선 올인원 솔루션 <a href="https://dataclinic.ai" target="_blank" title="https://dataclinic.ai" class="inline-block ml-1 text-gray-400 hover:text-orange-500 transition-colors align-middle"><svg class="w-4 h-4 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg></a></li>
                     </ol>
                 </div>
             </section>
