--- a/index.html
+++ b/index.html
@@ -553,9 +553,9 @@
                 const hasModal = article.hasModal || false;
                 const isFeatured = article.featured || false;
 
-                // Use cardImage if available and not empty
+                // Use cardImage if available, fallback to image
                 const hasCardImage = article.cardImage && article.cardImage.trim() !== '';
-                const displayImage = hasCardImage ? article.cardImage : null;
+                const displayImage = hasCardImage ? article.cardImage : article.image;
 
                 // Check if displaying Pebblous logo (both orange and black variants)
                 const isPebblousLogo = displayImage && (displayImage.includes('Pebblous_BM_Orange_RGB') || displayImage.includes('Pebblous_BM_Black_RGB'));
