--- a/index.html
+++ b/index.html
@@ -555,7 +555,14 @@
 
                 // Use cardImage if available, fallback to image
                 const hasCardImage = article.cardImage && article.cardImage.trim() !== '';
-                const displayImage = hasCardImage ? article.cardImage : article.image;
+                let displayImage = hasCardImage ? article.cardImage : article.image;
+
+                // Convert relative paths to absolute URLs
+                if (displayImage && !displayImage.startsWith('http')) {
+                    displayImage = displayImage.startsWith('/')
+                        ? `https://blog.pebblous.ai${displayImage}`
+                        : `https://blog.pebblous.ai/${displayImage}`;
+                }
 
                 // Check if displaying Pebblous logo (both orange and black variants)
                 const isPebblousLogo = displayImage && (displayImage.includes('Pebblous_BM_Orange_RGB') || displayImage.includes('Pebblous_BM_Black_RGB'));
