--- a/project/CURK/Mini-Project/CURK-2025-09-29/index.html
+++ b/project/CURK/Mini-Project/CURK-2025-09-29/index.html
@@ -50,6 +50,64 @@
     <meta name="twitter:label2" content="난이도">
     <meta name="twitter:data2" content="중급">
 
+    <!-- FAQPage Schema for SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "벡터 임베딩과 지식 그래프의 차이는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "벡터 임베딩은 텍스트나 이미지를 고차원 숫자 공간의 점으로 변환하여 의미적 유사도를 계산합니다. 검색과 추천에 강하지만, '왜 유사한지' 설명하기 어렵습니다. 지식 그래프는 개체와 관계를 명시적으로 정의하여 추론과 설명이 가능하지만, 확장성이 떨어집니다. 실무에서는 벡터 임베딩으로 후보를 빠르게 찾고, 지식 그래프로 관계를 검증하는 하이브리드 접근이 효과적입니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "벡터 임베딩과 지식 그래프를 어떻게 결합하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "3가지 결합 방법이 있습니다. 1) 벡터 검색 + 그래프 필터링: 벡터로 유사 문서를 찾고, 그래프 관계로 후처리. 2) 그래프 구조 + 벡터 임베딩: 지식 그래프의 각 노드에 벡터를 추가(예: Graph Neural Network). 3) 하이브리드 RAG: LLM이 벡터로 문서를 검색하고, 그래프로 사실 관계를 검증. 이 문서는 ISO 5259-2 표준을 예제로 세 가지 방법을 모두 시연합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "벡터 데이터베이스는 어떤 것을 사용해야 하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "주요 벡터 DB: 1) Pinecone: 완전 관리형 클라우드, 초보자에게 추천. 2) Weaviate: 오픈소스, 하이브리드 검색(벡터+키워드) 강점. 3) Milvus: 대규모 데이터용, 확장성 우수. 4) Qdrant: Rust 기반, 속도와 메모리 효율 최고. 5) ChromaDB: 임베디드용, 프로토타입에 적합. 선택 기준은 데이터 규모, 예산, 인프라(클라우드 vs 온프레미스), 하이브리드 검색 필요 여부입니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "GraphRAG와 일반 RAG의 차이는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "일반 RAG(Retrieval-Augmented Generation)는 벡터 검색으로 관련 문서를 찾아 LLM에 주입합니다. GraphRAG는 여기에 지식 그래프를 추가하여 1) 다중 문서 간 관계 추적, 2) 추론 경로 설명, 3) 모순 탐지, 4) 시간적 인과관계 파악이 가능합니다. 예: '삼성과 SK하이닉스의 공급망 관계'처럼 복잡한 질문에는 GraphRAG가 필수입니다. Microsoft가 제안한 개념으로, 최근 주목받고 있습니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "이 가이드에서 비교한 AI 모델들의 차이점은 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "이 문서는 Claude 3.5 Sonnet, GPT-4o, Gemini 1.5 Pro가 생성한 ISO 5259-2 분석 보고서를 비교합니다. Claude는 구조화와 정확성, GPT-4o는 실무 예제와 설명력, Gemini는 시각화와 다각도 분석에서 강점을 보였습니다. 각 모델의 강점을 활용하여 하이브리드 워크플로우를 구성하면 최상의 결과를 얻을 수 있습니다. 예: Claude로 초안 → GPT로 예제 추가 → Gemini로 시각화."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "벡터 임베딩과 지식 그래프를 실무에서 어떻게 활용하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "실무 활용 사례: 1) 기업 검색: 벡터로 문서 검색 + 지식 그래프로 부서/프로젝트 관계 필터링. 2) 의료 진단: 벡터로 유사 증상 검색 + 지식 그래프로 질병-약물 상호작용 검증. 3) 금융 리스크: 벡터로 이상 거래 탐지 + 지식 그래프로 관계사 네트워크 추적. 4) 법률 분석: 벡터로 판례 검색 + 지식 그래프로 법 조항 간 관계 분석. 핵심은 '빠른 검색(벡터)'과 '정확한 추론(그래프)'의 조합입니다."
+                }
+            }
+        ]
+    }
+    </script>
+
     <!-- Styles and Scripts -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
