--- a/report/llm-dataset-guide-2025-10-16/ko/index.html
+++ b/report/llm-dataset-guide-2025-10-16/ko/index.html
@@ -32,6 +32,64 @@
     <meta id="twitter-image" property="twitter:image" content="https://blog.pebblous.ai/report/llm-dataset-guide-2025-10-16/index.png">
     <meta property="twitter:card" content="summary_large_image">
 
+    <!-- FAQPage Schema for SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "LLM 학습용 데이터셋을 선택할 때 가장 중요한 기준은 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "3가지 핵심 기준이 있습니다. 1) 저작권과 라이선스: 상업적 활용이 가능한 CC0, CC-BY, MIT 라이선스 확인 필수. 2) 데이터 품질: 중복 제거(Deduplication), 유해 콘텐츠 필터링, 언어별 분포 균형. 3) 도메인 적합성: 일반 LLM은 다양한 소스 혼합, 도메인 특화 모델(예: 의료, 법률)은 전문 데이터셋 선택. RedPajama, Dolma, FineWeb 같은 대규모 오픈 데이터셋은 이 세 가지를 모두 고려하여 구성되었습니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "가장 많이 사용되는 LLM 학습 데이터셋은 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "주요 오픈 데이터셋: 1) RedPajama (1.2T 토큰): Common Crawl, GitHub, arXiv, Wikipedia, Stack Exchange 혼합. 2) The Pile (825GB): EleutherAI의 다양한 학술/기술 문서 모음. 3) Dolma (3T 토큰): Allen AI의 최신 대규모 데이터셋. 4) FineWeb (15T 토큰): HuggingFace의 고품질 웹 데이터. 5) C4 (750GB): Google의 Cleaned Common Crawl. 코드 특화: The Stack (6TB), 학술 특화: arXiv, PubMed. 실무에서는 이들을 혼합하여 사용합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "AI 및 데이터과학 분야 LLM을 위한 데이터셋 혼합 비율은 어떻게 하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "전문 LLM을 위한 권장 혼합 비율: 1) 학술 논문 (30-40%): arXiv (AI/ML/CS), PubMed (데이터과학), 2) 코드 (25-35%): The Stack (GitHub), Jupyter Notebooks, 3) 기술 문서 (15-20%): Stack Overflow, Read the Docs, API 문서, 4) 일반 지식 (15-20%): Wikipedia, 고품질 뉴스, 5) 대화/지시 (5-10%): Dolly, ShareGPT, OpenAssistant. 이 비율은 목적에 따라 조정하며, 사전 학습 vs 파인튜닝에 따라 다릅니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "LLM 학습 데이터셋의 저작권 문제를 어떻게 피하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "저작권 안전 전략: 1) 명시적 허용 라이선스만 사용: CC0, CC-BY, MIT, Apache 2.0 확인. 2) Common Crawl 사용 시 로봇 배제 표준(robots.txt) 준수 여부 확인. 3) 뉴스/출판물은 fair use 논란 가능성 있어 제외 권장. 4) GitHub 코드는 라이선스 명시된 것만 사용. 5) 데이터 출처 문서화 및 버전 관리. 6) 법률 자문 필수. 최근 NYT vs OpenAI 소송 사례처럼 저작권 리스크가 증가하고 있어 신중한 데이터셋 선택이 필수입니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "데이터셋 전처리 시 중복 제거(Deduplication)가 왜 중요한가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "중복 데이터는 3가지 문제를 일으킵니다. 1) 과적합(Overfitting): 같은 내용 반복 학습으로 일반화 능력 저하. 2) 데이터 누출(Data Leakage): 중복된 내용이 평가셋에도 포함되면 성능 과대평가. 3) 편향(Bias): 특정 내용이 과도하게 학습되어 편향된 출력 생성. 연구에 따르면 중복 제거 후 모델 성능이 5-10% 향상됩니다. MinHash, SimHash, Exact Deduplication 등의 기법을 사용하며, RedPajama와 Dolma는 강력한 중복 제거를 적용했습니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "오픈 데이터셋으로 상업용 LLM을 학습시킬 수 있나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "네, 가능합니다. RedPajama, Dolma, FineWeb, The Stack (MIT 라이선스 부분)은 상업적 사용이 명시적으로 허용됩니다. 주의사항: 1) 데이터셋의 각 구성 요소별 라이선스 확인 필수 (혼합 데이터셋의 경우). 2) 학습은 가능하지만, 생성된 콘텐츠의 저작권은 별도 검토 필요. 3) 법률 자문 권장. 실제로 Falcon, MPT, Llama 등 많은 오픈소스 LLM이 이러한 데이터셋으로 학습되었으며, 상업적으로도 활용되고 있습니다."
+                }
+            }
+        ]
+    }
+    </script>
+
     <!-- Styles and Scripts -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
