--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -194,6 +194,64 @@
     }
     </script>
 
+    <!-- FAQPage Schema for SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "ISO 표준에서 온톨로지를 추출하는 이유는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "ISO 표준은 PDF 형식의 자연어 문서로 제공되어 AI가 직접 읽고 활용하기 어렵습니다. 온톨로지로 변환하면 1) 기계가 이해 가능한 지식 표현(RDF, OWL), 2) SPARQL로 쿼리 가능한 구조화 데이터, 3) AI 에이전트가 자동으로 품질 검증 규칙 생성, 4) 다른 표준과의 자동 매핑이 가능해집니다. 특히 ISO/IEC 5259-2 같은 AI 데이터 품질 표준은 온톨로지화하면 자동화된 데이터 진단 도구로 활용할 수 있습니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "온톨로지 추출 방법에는 어떤 것들이 있나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "3가지 방법이 있습니다. 1) 수동 추출: 전문가가 표준을 읽고 Protégé로 직접 작성 (정확하지만 시간 소요), 2) LLM 기반 자동 추출: GPT-4나 Claude로 PDF를 분석하여 자동 변환 (빠르지만 검증 필요), 3) 하이브리드: LLM이 초안 생성 후 전문가가 검증 및 수정 (실무에서 가장 많이 사용). 이 가이드는 하이브리드 접근법을 제시하며, Claude Code를 활용한 실전 예제를 제공합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "OWL과 RDF의 차이는 무엇이며 언제 어떤 것을 사용하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "RDF(Resource Description Framework)는 트리플(주어-술어-목적어) 형태의 기본 그래프 데이터 모델입니다. OWL(Web Ontology Language)은 RDF 위에 구축된 온톨로지 표현 언어로, 클래스 계층, 속성 제약, 추론 규칙을 정의할 수 있습니다. 간단한 데이터 표현은 RDF로 충분하지만, ISO 5259-2처럼 복잡한 계층 구조와 제약 조건이 있는 경우 OWL을 사용합니다. 실무에서는 OWL로 온톨로지를 정의하고, RDF 형식으로 저장합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "SPARQL 쿼리를 어떻게 활용할 수 있나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "SPARQL은 온톨로지 데이터를 쿼리하는 SQL과 유사한 언어입니다. 예시: 'ISO 5259-2의 모든 품질 특성 찾기', '정확성(Accuracy) 차원의 하위 측정 항목만 조회', '두 개 이상의 품질 특성과 연결된 측정 방법 찾기' 등이 가능합니다. AI 에이전트는 SPARQL로 표준을 자동 탐색하고, 데이터셋의 품질 검증 규칙을 동적으로 생성할 수 있습니다. 이 문서는 10개 이상의 실전 SPARQL 예제를 제공합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Cytoscape.js로 온톨로지를 시각화하는 이유는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "ISO 5259-2는 15개 품질 특성, 60개 측정 항목, 100개 이상의 관계로 구성된 복잡한 네트워크입니다. Cytoscape.js는 1) 계층 구조를 트리 레이아웃으로 시각화, 2) 특정 노드를 중심으로 연결 관계 탐색, 3) 필터링과 검색으로 관심 영역만 표시, 4) 인터랙티브 탐색(줌, 드래그, 클릭)이 가능합니다. 전문가가 표준을 이해하고, AI 에이전트가 생성한 온톨로지를 검증하는 데 필수적인 도구입니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "온톨로지 추출 시 주의해야 할 점은 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "1) 표준 문서의 암묵적 지식 누락: ISO 표준은 배경 지식을 가정하므로 LLM이 놓칠 수 있습니다. 2) 용어 불일치: 표준 내에서도 같은 개념을 다르게 표현할 수 있어 정규화 필요. 3) 버전 관리: 표준이 개정되면 온톨로지도 업데이트해야 하므로 버전 관리 시스템 구축. 4) 라이선스: ISO 표준은 저작권이 있으므로 온톨로지 배포 시 법적 검토 필수. 5) 검증: LLM 생성 결과는 반드시 도메인 전문가가 검증해야 합니다."
+                }
+            }
+        ]
+    }
+    </script>
+
     <!-- Styles -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
