--- a/project/CURK/ontology/palantir-vs-classic-ontology.html
+++ b/project/CURK/ontology/palantir-vs-classic-ontology.html
@@ -282,6 +282,64 @@
     }
     </script>
 
+    <!-- FAQPage Schema for SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "팔란티어 온톨로지와 전통 온톨로지의 핵심 차이는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "전통 온톨로지(OWL, RDF)는 정적 지식 표현에 집중하며 추론과 검증에 강점이 있습니다. 반면 팔란티어 온톨로지는 '운영 온톨로지(Operational Ontology)' 개념으로, 실시간 데이터 통합, 동적 워크플로우 실행, AI 기반 의사결정을 지원합니다. 팔란티어는 3계층 아키텍처(의미 계층, 동적 계층, 역동적 계층)를 통해 정적 지식을 운영 실행으로 연결하는 것이 특징입니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "온톨로지 기술은 어떻게 40년간 진화해 왔나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "온톨로지는 1980년대 인공지능 지식 표현 연구에서 시작하여, 1990년대 웹 온톨로지(OWL, RDF)로 발전했습니다. 2000년대에는 시맨틱 웹과 SPARQL이 등장했고, 2010년대 이후 지식 그래프(Google, Amazon)와 엔터프라이즈 데이터 통합으로 확장되었습니다. 최근에는 팔란티어의 운영 온톨로지처럼 실시간 데이터, AI, 디지털 트윈을 통합하는 '실행 가능한 지식 시스템'으로 진화하고 있습니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "팔란티어 온톨로지의 3계층 아키텍처는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "팔란티어 온톨로지는 3계층으로 구성됩니다. 1) 의미 계층(Semantic Layer): 객체, 속성, 관계 정의 (전통 온톨로지와 유사), 2) 동적 계층(Dynamic Layer): 액션, 워크플로우, 파이프라인 실행, 3) 역동적 계층(Hyperdynamic Layer): AI 에이전트, 실시간 최적화, 예측 분석. 이 구조를 통해 '지식'에서 '실행'까지 끊김없이 연결됩니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "실무에서 팔란티어 온톨로지를 어떻게 활용하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "에어버스(Airbus)는 팔란티어 온톨로지로 전 세계 공급망 데이터를 통합하고, 부품 부족 시 자동으로 대체 공급업체를 제안하며, 생산 지연을 예측합니다. 제조업에서는 공장별 데이터 사일로를 해소하고, 실시간 공정 최적화와 품질 이상 감지에 활용됩니다. 금융, 국방, 헬스케어 등에서도 복잡한 엔터프라이즈 데이터를 통합하고 AI 기반 의사결정을 지원하는 데 사용됩니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "전통 온톨로지(OWL, RDF)를 아직도 사용해야 하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "네, 전통 온톨로지는 여전히 유효합니다. 정적 지식 표현, 표준화된 데이터 교환, 추론 엔진이 필요한 경우(의료 지식, 법률 시스템, 과학 연구)에는 OWL, RDF, SPARQL이 적합합니다. 팔란티어 온톨로지는 실시간 운영과 AI 통합이 핵심인 엔터프라이즈 환경에 최적화되어 있습니다. 실무에서는 두 접근법을 하이브리드로 결합하는 사례도 많습니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "온톨로지와 지식 그래프의 차이는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "온톨로지는 도메인의 개념과 관계를 '정의'하는 메타 모델입니다. 지식 그래프는 온톨로지를 기반으로 실제 데이터를 '표현'하는 그래프 구조입니다. 예를 들어, 온톨로지가 '제품, 공급업체, 주문'의 관계를 정의하면, 지식 그래프는 'Samsung이 SK하이닉스에서 메모리 칩 1000개 주문'과 같은 구체적 사실을 저장합니다. 온톨로지는 설계도, 지식 그래프는 실제 건물로 비유할 수 있습니다."
+                }
+            }
+        ]
+    }
+    </script>
+
     <!-- Styles and Scripts -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
