physical AI update

--- a/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
+++ b/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
@@ -123,6 +123,64 @@
     }
     </script>
 
+    <!-- FAQPage Schema for SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "피지컬 AI (Physical AI)가 제조업에 미치는 영향은 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "피지컬 AI (Physical AI)는 제조업의 패러다임을 근본적으로 변화시키고 있습니다. 전통적인 AI가 웹 데이터 기반이었다면, 피지컬 AI는 센서 데이터, 로봇 데이터, 공정 데이터 등 물리적 세계의 데이터를 직접 활용합니다. Tesla의 Optimus 로봇, NVIDIA의 Isaac 플랫폼처럼, 제조 현장의 실시간 의사결정, 품질 관리, 공정 최적화를 자동화하여 생산성을 획기적으로 향상시킵니다. 핵심은 AI-Ready Data의 확보입니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "AI-Ready Data란 무엇이고, 왜 피지컬 AI에 필수적인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "AI-Ready Data는 AI 모델이 즉시 학습할 수 있도록 정제, 표준화, 라벨링된 고품질 데이터를 의미합니다. 제조 현장의 Raw Data는 대부분 노이즈, 결측값, 비표준 형식으로 인해 그대로는 학습에 사용할 수 없습니다. Physical AI는 실시간 제어와 안전이 중요하기 때문에, 데이터 품질이 곧 시스템 신뢰성을 결정합니다. 페블러스의 DataClinic은 제조 데이터를 AI-Ready 상태로 전환하는 자동화된 파이프라인을 제공합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "페블러스의 DataClinic은 어떤 솔루션인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "DataClinic은 제조 현장의 데이터 품질을 진단하고 개선하는 AI 기반 SaaS 플랫폼입니다. ISO/IEC 5259 국제 표준에 기반하여 데이터의 정확성, 완전성, 일관성, 적시성을 자동으로 평가합니다. 데이터 다이어트(불필요한 데이터 제거)와 데이터 벌크업(부족한 데이터 생성)을 통해 Physical AI 학습에 최적화된 데이터셋을 생성합니다. 제조 대기업의 레거시 시스템과도 쉽게 통합 가능합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Physical AI를 위한 합성 데이터(Synthetic Data)가 필요한 이유는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "제조 현장에서는 실제 데이터 수집이 어려운 경우가 많습니다. 1) 불량품 데이터가 부족(정상 제품이 대부분), 2) 위험한 상황 시뮬레이션 불가능, 3) 개인정보/기밀정보 포함. Synthetic Data는 이런 제약을 극복하기 위해 실제와 유사한 가상 데이터를 생성합니다. Tesla는 자율주행 학습에 합성 데이터를 활용하며, NVIDIA Omniverse는 Digital Twin 기반 합성 데이터 생성을 지원합니다. 페블러스 AADS는 제조 특화 합성 데이터 생성 기술을 제공합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "피지컬 AI 도입 시 제조 기업이 겪는 주요 데이터 과제는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "주요 과제는 3가지입니다. 1) 데이터 사일로: 부서별로 고립된 데이터로 인한 통합 어려움. 2) 데이터 품질 문제: 센서 오류, 누락, 비표준 형식으로 인한 낮은 신뢰도. 3) 실시간 처리 요구: Physical AI는 밀리초 단위 응답이 필요하지만 기존 인프라는 배치 처리 중심. 페블러스는 PebbloScope(실시간 데이터 파이프라인), DataClinic(품질 관리), AADS(자동화된 데이터 준비)로 이 3가지 과제를 해결합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "피지컬 AI 데이터 전략 구축을 어디서부터 시작해야 하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "3단계 접근을 권장합니다. 1단계(진단): 현재 데이터 현황을 평가하고 AI-Ready 수준을 측정. DataClinic으로 데이터 품질 스코어링. 2단계(파일럿): 하나의 생산 라인 또는 공정에서 시작하여 ROI 검증. 3단계(확장): 성공 사례를 전사로 확대하고 Digital Twin 구축. 중요한 것은 처음부터 완벽한 데이터를 만들려 하지 말고, 점진적으로 개선하는 것입니다. 페블러스는 각 단계에 맞는 컨설팅과 기술 지원을 제공합니다."
+                }
+            }
+        ]
+    }
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
