--- a/project/PhysicalAI/data-startup-physical-ai-01.html
+++ b/project/PhysicalAI/data-startup-physical-ai-01.html
@@ -968,27 +968,27 @@
                 defaultTheme: "dark",
                 faqs: [
                     {
-                        question: "Physical AI란 무엇이며, 기존 AI와 어떻게 다른가요?",
-                        answer: "Physical AI는 AI가 물리적 세계를 직접 인지, 판단, 제어하는 기술입니다. 웹 데이터 기반의 소비자 AI(Consumer AI)와 달리, 제조 공정, 자율주행, 로봇 등 실제 물리적 환경에서 작동하며 '안전(Safety)'이 핵심입니다. 공정 중단이나 인명 사고로 이어질 수 있어 치명적 오류를 허용하지 않으며, 따라서 AI-Ready Data의 완벽한 품질이 필수적입니다."
+                        question: "피지컬 AI (Physical AI)란 무엇이며, 기존 AI와 어떻게 다른가요?",
+                        answer: "피지컬 AI (Physical AI)는 AI가 물리적 세계를 직접 인지, 판단, 제어하는 기술입니다. 웹 데이터 기반의 소비자 AI(Consumer AI)와 달리, 제조 공정, 자율주행, 로봇 등 실제 물리적 환경에서 작동하며 '안전(Safety)'이 핵심입니다. 공정 중단이나 인명 사고로 이어질 수 있어 치명적 오류를 허용하지 않으며, 따라서 AI-Ready Data의 완벽한 품질이 필수적입니다."
                     },
                     {
-                        question: "AI-Ready Data가 무엇이고, 왜 Physical AI에서 중요한가요?",
-                        answer: "AI-Ready Data는 AI 모델이 즉시 학습할 수 있도록 정제되고 구조화된 고품질 데이터를 의미합니다. 대부분의 제조 대기업은 '데이터는 많지만(Data-Rich), AI가 즉시 학습할 준비가 된 데이터는 없는(AI-Ready-Data-Poor)' 상태입니다. Physical AI의 성공은 AI 모델 자체가 아닌, 모델에 주입되는 데이터의 품질에 전적으로 의존하기 때문에 AI-Ready Data 확보가 핵심입니다."
+                        question: "AI-Ready Data가 무엇이고, 왜 피지컬 AI에서 중요한가요?",
+                        answer: "AI-Ready Data는 AI 모델이 즉시 학습할 수 있도록 정제되고 구조화된 고품질 데이터를 의미합니다. 대부분의 제조 대기업은 '데이터는 많지만(Data-Rich), AI가 즉시 학습할 준비가 된 데이터는 없는(AI-Ready-Data-Poor)' 상태입니다. 피지컬 AI (Physical AI)의 성공은 AI 모델 자체가 아닌, 모델에 주입되는 데이터의 품질에 전적으로 의존하기 때문에 AI-Ready Data 확보가 핵심입니다."
                     },
                     {
-                        question: "데이터 중심 AI(Data-Centric AI) 스타트업이 필요한 이유는 무엇인가요?",
-                        answer: "대기업은 제조 도메인 지식은 풍부하지만, 데이터 품질 관리와 AI-Ready Data 생성 기술이 부족합니다. 반면 스타트업은 최신 데이터 기술과 AI 전문성을 보유하고 있습니다. 페블러스와 같은 데이터 중심 AI 스타트업은 대기업의 Raw Data를 AI-Ready Data로 전환하는 기술(데이터클리닉, 페블로스코프, AADS)을 제공하여 이 간극을 메우는 핵심 역할을 합니다."
+                        question: "데이터 중심 AI(Data-Centric AI) 스타트업이 피지컬 AI 시대에 필요한 이유는 무엇인가요?",
+                        answer: "대기업은 제조 도메인 지식은 풍부하지만, 데이터 품질 관리와 AI-Ready Data 생성 기술이 부족합니다. 반면 스타트업은 최신 데이터 기술과 AI 전문성을 보유하고 있습니다. 페블러스와 같은 데이터 중심 AI 스타트업은 대기업의 Raw Data를 AI-Ready Data로 전환하는 기술(데이터클리닉, 페블로스코프, AADS)을 제공하여 Physical AI 구현에 필수적인 이 간극을 메우는 핵심 역할을 합니다."
                     },
                     {
                         question: "대기업과 스타트업의 전략적 협력 모델은 어떻게 구성되나요?",
                         answer: "대기업의 도메인 지식과 스타트업의 데이터 기술력을 결합하는 3단계 협력 모델이 제안됩니다: 1) 파일럿 프로젝트로 신뢰 구축 및 ROI 검증, 2) 전사 확대를 통한 데이터 인프라 통합, 3) 장기 파트너십으로 공동 IP 개발 및 글로벌 진출. 정부는 R&D 자금 지원, 규제 샌드박스, 세제 혜택 등으로 이 생태계를 육성해야 합니다."
                     },
                     {
-                        question: "한국이 Physical AI에서 글로벌 경쟁력을 확보할 수 있는 이유는 무엇인가요?",
-                        answer: "한국은 조선, 자동차, 반도체 등 세계 최고 수준의 제조업 인프라와 5G/6G 통신 기술을 보유하고 있습니다. Physical AI는 아직 초기 단계로, 데이터 품질 기술에 집중 투자하면 후발 주자도 선도 국가로 도약할 수 있습니다. 특히 안전과 신뢰성이 중요한 제조업 분야에서 한국의 품질 관리 노하우와 데이터 기술력을 결합하면 향후 30년의 경제 패권을 확보할 수 있습니다."
+                        question: "한국이 피지컬 AI (Physical AI)에서 글로벌 경쟁력을 확보할 수 있는 이유는 무엇인가요?",
+                        answer: "한국은 조선, 자동차, 반도체 등 세계 최고 수준의 제조업 인프라와 5G/6G 통신 기술을 보유하고 있습니다. 피지컬 AI는 아직 초기 단계로, 데이터 품질 기술에 집중 투자하면 후발 주자도 선도 국가로 도약할 수 있습니다. 특히 안전과 신뢰성이 중요한 제조업 분야에서 한국의 품질 관리 노하우와 데이터 기술력을 결합하면 향후 30년의 경제 패권을 확보할 수 있습니다."
                     },
                     {
-                        question: "Physical AI 도입 시 기업이 직면하는 주요 과제는 무엇인가요?",
+                        question: "피지컬 AI 도입 시 기업이 직면하는 주요 과제는 무엇인가요?",
                         answer: "주요 과제는 1) 레거시 시스템과의 통합 문제, 2) 데이터 사일로(고립된 데이터) 해소, 3) 데이터 품질 표준화(ISO 5259 등), 4) AI 전문 인력 부족입니다. 이를 해결하기 위해서는 단계적 접근(파일럿 → 확대 → 전사 적용)과 데이터 중심 AI 스타트업과의 협력이 필수적입니다."
                     }
                 ]
