--- a/project/IR/PBLS-IR-Physical-AI-01.html
+++ b/project/IR/PBLS-IR-Physical-AI-01.html
@@ -20,6 +20,64 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&display=swap" rel="stylesheet">
 
+    <!-- FAQPage Schema for SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "페블러스의 피지컬 AI (Physical AI) 데이터 그린하우스 전략이란 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "데이터 그린하우스는 제조 현장의 'Raw Data'를 'Green Data'(AI-Ready, 고품질, 즉시 학습 가능한 데이터)로 성장시키는 페블러스의 핵심 전략입니다. 피지컬 AI 시대에는 데이터 품질이 곧 경쟁력이며, 페블러스는 Edge-to-Core 아키텍처로 현장 데이터를 수집하고, DataClinic과 AADS로 AI-Ready 상태로 전환하여, Physical AI 모델 학습에 즉시 투입 가능한 데이터를 공급합니다. 이는 Tesla의 Data Engine, NVIDIA의 Omniverse와 유사한 접근이지만 제조 산업에 특화되어 있습니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "피지컬 AI 시장 규모와 페블러스의 시장 기회는 어떻게 되나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "글로벌 Physical AI 시장은 2025년 약 100억 달러에서 2030년 500억 달러로 성장할 전망입니다(CAGR 38%). 그러나 AI 모델보다 데이터 인프라 시장이 더 큽니다. 제조 기업의 80%가 'Data-Rich but AI-Ready-Data-Poor' 상태이며, 이들은 모델보다 데이터 준비에 더 많은 예산을 투자합니다. 페블러스는 한국 제조업(자동차, 조선, 반도체, 디스플레이)을 시작으로 글로벌 제조 데이터 인프라 시장을 공략합니다. TAM은 약 200억 달러(데이터 품질 관리 시장)입니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "페블러스의 핵심 차별화 요소는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "3가지 핵심 차별화가 있습니다. 1) Mobility-First GTM: 클라우드가 아닌 On-Premise/Edge 우선 전략으로 제조 현장의 데이터 보안과 실시간 처리 요구를 충족. 2) ISO/IEC 5259 표준 기반: 국제 표준 준수로 글로벌 제조사의 신뢰 확보. 3) End-to-End 자동화: 데이터 수집(PebbloScope) → 품질 관리(DataClinic) → AI 학습(AADS)까지 전체 파이프라인 통합. 경쟁사들은 부분 솔루션만 제공하지만, 페블러스는 턴키 방식으로 제공합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "페블러스의 수익 모델과 성장 전략은 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "수익 모델은 3층 구조입니다. 1) SaaS 구독료: DataClinic의 월간/연간 구독 (기업당 연 5천만원~5억원). 2) Professional Services: 데이터 파이프라인 구축, 컨설팅 (프로젝트당 3억~10억원). 3) Data Marketplace: 고품질 합성 데이터 판매 (데이터셋당 1억~5억원). GTM은 3단계로 진행됩니다. Phase 1(2025): 국내 대기업 PoC 및 첫 상용화. Phase 2(2026): 국내 주요 제조사 전사 확대. Phase 3(2027~): 일본, 동남아, 유럽 진출. 2027년 매출 100억원, 2030년 1,000억원 목표입니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "투자금은 어떻게 사용될 계획인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Series A 50억원 투자금 용도: 1) R&D (40%, 20억): Physical AI 합성 데이터 생성 엔진 고도화, ISO 표준 자동 적용 기술, Real-time Edge AI 최적화. 2) 인력 (30%, 15억): AI 엔지니어 10명, 영업 5명, 제조 도메인 전문가 3명 채용. 3) 마케팅 및 영업 (20%, 10억): 국내 Top 10 제조사 PoC 지원, 해외 전시회 참가, 파트너십 구축. 4) 운영비 (10%, 5억): 인프라, 사무실, 법률/회계. 목표: 18개월 내 3개 대기업 상용 계약 확보, 시리즈 B 준비."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "경쟁사 대비 페블러스의 우위는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "글로벌 경쟁사(Dataiku, Databricks, Alteryx)는 범용 데이터 플랫폼으로 제조 특화 기능이 약합니다. 국내 경쟁사(삼성SDS, LG CNS)는 SI 중심으로 SaaS 제품이 부족합니다. 페블러스는 1) 제조 Physical AI에 특화된 전문성, 2) 경량 Edge 솔루션으로 현장 배포 용이, 3) ISO 표준 기반의 글로벌 확장성, 4) 대기업 SI 경험(삼성, 현대차 PoC)으로 레퍼런스 확보. First-Mover Advantage로 국내 Physical AI 데이터 시장의 50% 점유율 목표입니다."
+                }
+            }
+        ]
+    }
+    </script>
+
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
